[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61.0", "wheel" ]


[project]
dependencies = [ "aria2p" ]
description = "continue suspended file, simulate request as from browser, support smart auto retry when speed is too low."
keywords = [ "aria2c", "aria2p" ]
name = "aria2p_wrapper"
readme = "README.md"
version = "0.0.1"
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python",
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13"
]
requires-python = ">=3.11"


[[project.authors]]
name = "nolca"
email = "nolca@qq.com"


[project.license]
file = "LICENSE"


[project.optional-dependencies]
dev = [ "pytest", "pytest-asyncio" ]


[project.urls]
Download = "http://github.com/AClon314/aria2p_wrapper/releases"
Homepage = "http://github.com/AClon314/aria2p_wrapper"


[tool.setuptools.package-dir]
aria2p_wrapper = "."
